// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Each basic use 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Each"
          >
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                <span
                  class="label label-default m-l-sm"
                >
                  A
                </span>

              </span>
            </span>
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                <span
                  class="label label-default m-l-sm"
                >
                  B
                </span>

              </span>
            </span>
            <span
              class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
            >
              <span>
                <span
                  class="label label-default m-l-sm"
                >
                  C
                </span>

              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Each in form 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Each"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              <span
                class="label label-info m-l-sm"
              >
                A
              </span>
            </span>
          </span>
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              <span
                class="label label-info m-l-sm"
              >
                B
              </span>
            </span>
          </span>
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              <span
                class="label label-info m-l-sm"
              >
                C
              </span>
            </span>
          </span>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Each with array of objects value 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Each show"
  >
    <span
      class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
    >
      <span>
        <span
          class="label label-default m-l-sm"
        >
          jack:0
        </span>

      </span>
    </span>
    <span
      class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
    >
      <span>
        <span
          class="label label-default m-l-sm"
        >
          martin:1
        </span>

      </span>
    </span>
  </div>
</div>
`;

exports[`Renderer:Each with source 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Each"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Wrapper __AMIS_COMPONENT_CLASS_PREFIX__Wrapper--md"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  <span
                    class="label label-default m-l-sm"
                  >
                    name: jerry
                  </span>

                </span>
              </span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__Tag __AMIS_COMPONENT_CLASS_PREFIX__Tag--normal"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tag-text"
                >
                  age: 21
                </span>
              </span>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Wrapper __AMIS_COMPONENT_CLASS_PREFIX__Wrapper--md"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  <span
                    class="label label-default m-l-sm"
                  >
                    name: tom
                  </span>

                </span>
              </span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__Tag __AMIS_COMPONENT_CLASS_PREFIX__Tag--normal"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Tag-text"
                >
                  age: 29
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
